--- a/src/Authentication/LogIn.css
+++ b/src/Authentication/LogIn.css
@@ -1,3 +1,14 @@
+/* In your CSS file (e.g., Login.css) */
+.register-link {
+  color: rgb(86, 86, 252); /* Set text color to blue */
+  text-decoration: none; /* Remove underline */
+  margin-top: -15px;
+}
+
+.register-link:hover {
+  text-decoration: underline; /* Add underline on hover */
+}
+
 .login-title {
   text-align: center; /* Center the text */
   margin-bottom: 20px; /* Add some space below the title */
@@ -18,7 +29,7 @@
   border-radius: 8px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 
-  width: 50%; /* Adjust as needed */
+  width: 25%; /* Adjust as needed */
   margin: 20px auto; /* Add this line */
 }
 
@@ -41,7 +52,7 @@ input[type="password"] {
 }
 
 .button-login {
-  width: 100%;
+  width: 40%;
   padding: 10px;
   border-radius: 4px;
   border: none;
@@ -70,5 +81,8 @@ input[type="password"] {
   .login-form {
     width: 80%; /* Adjust the width for mobile screens */
     margin: 20px auto; /* Center horizontally on mobile screens */
+  }
+  .button-login {
+    width: 100%;
   }
 }
