--- a/src/components/ChallengeCompletePortal.css
+++ b/src/components/ChallengeCompletePortal.css
@@ -1,5 +1,72 @@
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 20;
+}
+
 .congratsMessage {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: large;
-  background-color: black;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  max-width: 40rem;
+  height: 300px;
+  background-color: rgb(0, 0, 0);
+  padding: 1rem;
+  border-top: 3px solid white;
+  border-left: 3px solid white;
+  border-bottom: 3px solid white;
+  border-radius: 14px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  z-index: 30;
+  animation: slide-down 300ms ease-out forwards;
+  overflow-y: auto;
+  margin-left: -300px;
+}
+
+@media (max-width: 600px) {
+  body,
+  html {
+    overflow-x: hidden;
+  }
+  .congratsMessage {
+    width: 80%;
+    max-width: none;
+    height: 400px;
+    border: 3px solid white;
+    left: 87%; /* Adjust this value to prevent the left part of the portal from being cut off */
+  }
+}
+
+.congratsMessage button {
+  margin-top: 30px;
+  position: relative;
+  bottom: 1rem;
+  left: calc(50% - (80% / 2));
+  width: 80%;
+  background: linear-gradient(
+    to right,
+    rgb(134, 2, 2),
+    rgb(87, 2, 2),
+    rgb(20, 0, 0)
+  );
+  color: white;
+  border: none;
+  padding: 0.5rem;
+}
+
+@keyframes slide-down {
+  from {
+    opacity: 0;
+    transform: translateY(-50%) translateY(-3rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(-50%) translateY(0);
+  }
 }
